log
Fri 14 Apr 2023 12:41:35 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:18: error: expected expression before ‘;’ token
   55 |     HashMap mapa=;
      |                  ^
hashmap.c:57:9: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   57 |     mapa->current=(-1);
      |         ^~
hashmap.c:58:9: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   58 |     mapa->capacity=capacity;
      |         ^~
hashmap.c:59:9: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   59 |     mapa->size=NULL;
      |         ^~
Compilation failed
bb12bde
Fri 14 Apr 2023 12:42:35 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
0d83935
Tue 18 Apr 2023 10:45:05 PM UTC: 
 hashmap.c | 25 ++++++++++++++++++++-----
 1 file changed, 20 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:20: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   58 |     mapa->buckets=(pair **)malloc(sizeof(pair *));;
      |                    ^~~~
      |                    Pair
hashmap.c:58:20: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:27: error: expected expression before ‘)’ token
   58 |     mapa->buckets=(pair **)malloc(sizeof(pair *));;
      |                           ^
hashmap.c:59:16: error: ‘size’ undeclared (first use in this function)
   59 |     mapa->size=size;
      |                ^~~~
hashmap.c: In function ‘searchMap’:
hashmap.c:72:37: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   72 |   while((is_equal(key, map->buckets[pos])!=0){
      |                                     ^~~
      |                                     pow
hashmap.c:72:46: error: expected ‘)’ before ‘{’ token
   72 |   while((is_equal(key, map->buckets[pos])!=0){
      |        ~                                     ^
      |                                              )
hashmap.c:79:3: error: expected expression before ‘}’ token
   79 |   }
      |   ^
hashmap.c:69:38: error: variable ‘start’ set but not used [-Werror=unused-but-set-variable]
   69 |   int i = hash( key, map->capacity), start;
      |                                      ^~~~~
hashmap.c: At top level:
hashmap.c:80:3: error: expected identifier or ‘(’ before ‘return’
   80 |   return NULL;
      |   ^~~~~~
hashmap.c:81:1: error: expected identifier or ‘(’ before ‘}’ token
   81 | }
      | ^
hashmap.c: In function ‘searchMap’:
hashmap.c:79:3: error: control reaches end of non-void function [-Werror=return-type]
   79 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
0d42349
Tue 18 Apr 2023 10:45:59 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:20: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   58 |     mapa->buckets=(pair **)malloc(sizeof(pair *));;
      |                    ^~~~
      |                    Pair
hashmap.c:58:20: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:27: error: expected expression before ‘)’ token
   58 |     mapa->buckets=(pair **)malloc(sizeof(pair *));;
      |                           ^
hashmap.c:59:16: error: ‘size’ undeclared (first use in this function)
   59 |     mapa->size=size;
      |                ^~~~
hashmap.c: In function ‘searchMap’:
hashmap.c:74:37: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   74 |   while((is_equal(key, map->buckets[pos])!=0){
      |                                     ^~~
      |                                     pow
hashmap.c:74:46: error: expected ‘)’ before ‘{’ token
   74 |   while((is_equal(key, map->buckets[pos])!=0){
      |        ~                                     ^
      |                                              )
hashmap.c:81:1: error: expected expression before ‘}’ token
   81 | }
      | ^
hashmap.c:71:38: error: variable ‘start’ set but not used [-Werror=unused-but-set-variable]
   71 |   int i = hash( key, map->capacity), start;
      |                                      ^~~~~
hashmap.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d2bd61c
Tue 18 Apr 2023 10:46:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:16: error: ‘size’ undeclared (first use in this function)
   59 |     mapa->size=size;
      |                ^~~~
hashmap.c:59:16: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘searchMap’:
hashmap.c:74:37: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   74 |   while((is_equal(key, map->buckets[pos])!=0){
      |                                     ^~~
      |                                     pow
hashmap.c:74:46: error: expected ‘)’ before ‘{’ token
   74 |   while((is_equal(key, map->buckets[pos])!=0){
      |        ~                                     ^
      |                                              )
hashmap.c:81:1: error: expected expression before ‘}’ token
   81 | }
      | ^
hashmap.c:71:38: error: variable ‘start’ set but not used [-Werror=unused-but-set-variable]
   71 |   int i = hash( key, map->capacity), start;
      |                                      ^~~~~
hashmap.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
081c4ef
Tue 18 Apr 2023 10:46:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:16: error: ‘size’ undeclared (first use in this function)
   59 |     mapa->size=size;
      |                ^~~~
hashmap.c:59:16: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘searchMap’:
hashmap.c:74:37: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   74 |   while((is_equal(key, map->buckets[pos])!=0)){
      |                                     ^~~
      |                                     pow
hashmap.c:75:11: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   75 |     if(key, map->buckets[pos]==1) {
      |           ^
hashmap.c:71:38: error: variable ‘start’ set but not used [-Werror=unused-but-set-variable]
   71 |   int i = hash( key, map->capacity), start;
      |                                      ^~~~~
cc1: all warnings being treated as errors
Compilation failed
df8406f
